Fix jumpy loading indicator

--- a/app/styles/components/_waveloader.scss
+++ b/app/styles/components/_waveloader.scss
@@ -4,9 +4,6 @@
     @include align-items(center);
     @include display(flex);
   }
-  &.is-full-screen {
-    margin-left: 86px;
-  }
   .wrapper {
       height: 60px;
       .text {
